# posh

./: .gitignore  CMakeCache.txt  Makefile  PATCH.md  README.md  cmake_install.cmake  makefile  xmake.lua
.ccls-cache/@@home@itsrxmmy@posh/: @usr@include@bits@long-double.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@c++@14.1.1@bits@cxxabi_init_exception.h.blob  @usr@include@c++@14.1.1@bits@exception.h.blob  @usr@include@c++@14.1.1@bits@exception_defines.h.blob  @usr@include@c++@14.1.1@bits@exception_ptr.h.blob  @usr@include@c++@14.1.1@bits@hash_bytes.h.blob  @usr@include@c++@14.1.1@bits@move.h.blob  @usr@include@c++@14.1.1@bits@nested_exception.h.blob  @usr@include@c++@14.1.1@bits@version.h.blob  @usr@include@c++@14.1.1@exception.blob  @usr@include@c++@14.1.1@new.blob  @usr@include@c++@14.1.1@pstl@pstl_config.h.blob  @usr@include@c++@14.1.1@type_traits.blob  @usr@include@c++@14.1.1@typeinfo.blob  @usr@include@c++@14.1.1@x86_64-pc-linux-gnu@bits@c++config.h.blob  @usr@include@c++@14.1.1@x86_64-pc-linux-gnu@bits@cpu_defines.h.blob  @usr@include@features-time64.h.blob  (+8 more)
config/: CONFIG.md
docs/: DOCS.md
src/: CMakeLists.txt  main.cc  posh.cc  posh.hh
src/posh/: Errors.cc  Errors.hh  FileManager.cc  FileManager.hh  IOS.cc  IOS.hh  Parser.cc  Parser.hh  command_engine.cc  command_engine.hh  errors.cc  errors.hh  file_helper.cc  file_helper.hh  filemanager.cc  filemanager.hh  ios.cc  ios.hh  parser.cc  parser.hh  posh.cc  posh.hh  utils.cc  utils.hh
src/posh/ios/: istream.cc  istream.hh  ostream.cc  ostream.hh
(+21 files in other folders)
